src/salesforce/objects/Portfolio_Content__c.object
<CustomObject>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Professional Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Biography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GitHub_URL__c</fullName>
        <label>GitHub URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Portfolio Content</label>
    <nameField>
        <label>Portfolio Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>